Kubernetes-Mastery/2-Network-Policy-Secure-Exposure/backend-app-namespace.yaml
# Namespace for backend (for completeness)
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    kubernetes.io/metadata.name: backend
