Kubernetes-Mastery/2-Network-Policy-Secure-Exposure/frontend-app-namespace.yaml
# Namespace for frontend (for completeness)
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    kubernetes.io/metadata.name: frontend
